# accesskit

./: .clang-format  .clippy.toml  .gitignore  .release-please-manifest.json  ARCHITECTURE.md  AUTHORS  CONTRIBUTING.md  Cargo.toml  LICENSE  README-APPLICATION-DEVELOPERS.md  README.md  deny.toml  ios-sim-runner.sh  pyproject.toml  release-please-config.json
.cargo/: config  config.toml
.github/: dependabot.yml
.github/workflows/: bindings.yml  c-bindings.yml  ci.yml  generate-headers.yml  python-bindings.yml  release-please.yml
accesskit/src/: geometry.rs  lib.rs
accesskit_consumer/: Cargo.toml  README.md
accesskit_consumer/src/: filters.rs  iterators.rs  lib.rs  node.rs
accesskit_multi_tree/: Cargo.toml
accesskit_multi_tree/src/: lib.rs
bindings/c/: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  accesskit-config.cmake  accesskit.cmake  cbindgen.toml
bindings/c/.cargo/: config.toml
bindings/c/examples/sdl/: CMakeLists.txt  README.md  hello_world.c
bindings/c/examples/windows/: .gitignore  CMakeLists.txt  README.md  build.bat  hello_world.c
bindings/c/include/: accesskit.h
bindings/c/src/: common.rs  geometry.rs  lib.rs  macos.rs  newton.rs  panic.rs  unix.rs  windows.rs
bindings/java/: .gitignore  Cargo.toml  build-macos-dist  build.gradle.kts  settings.gradle.kts
bindings/java/gradle/: libs.versions.toml
bindings/java/src/: common.rs  lib.rs  macos.rs  windows.rs
bindings/java/src/java/dev/accesskit/: Action.java  Adapter.java  Checked.java  CheckedState.java  DefaultActionVerb.java  Live.java  MacosSubclassingAdapter.java  NativePointerSupplier.java  Node.java  NodeBuilder.java  NodeId.java  Rect.java  Role.java  TextDirection.java  TextPosition.java  TextSelection.java  Tree.java  TreeUpdate.java  TreeUpdateSupplier.java  Util.java  WindowsSubclassingAdapter.java
bindings/jni/: .gitignore  build.gradle.kts  gradle.properties
bindings/jni/src/: common.rs  lib.rs
bindings/jni/src/java/dev/accesskit/: Library.java  Role.java  TreeUpdate.java
bindings/python/: CHANGELOG.md  Cargo.toml  README.md
bindings/python/examples/pygame/: README.md  hello_world.py  requirements.txt
bindings/python/src/: common.rs  geometry.rs  lib.rs  macos.rs  unix.rs  windows.rs
common/: CHANGELOG.md  Cargo.toml  README.md
common/src/: geometry.rs  lib.rs
consumer/: CHANGELOG.md  Cargo.toml
consumer/src/: filters.rs  iterators.rs  lib.rs  node.rs  text.rs  tree.rs
demo/: Cargo.toml
demo/src/: basics.rs  lib.rs  live.rs  tabs.rs  text.rs
docs/: c-bindings.md  how-it-works.md  python-bindings.md
l10n/: Cargo.toml
l10n/l10n/: af.txt  am.txt  ar.txt  as.txt  az.txt  be.txt  bg.txt  bn.txt  bs.txt  ca.txt  cs.txt  cy.txt  da.txt  de.txt  el.txt  en-gb.txt  en.txt  es-419.txt  es.txt  et.txt  eu.txt  fa.txt  fi.txt  fr-ca.txt  fr.txt  gl.txt  gu.txt  he.txt  hi.txt  hr.txt  hu.txt  hy.txt  id.txt  is.txt  it.txt  ja.txt  ka.txt  kk.txt  km.txt  kn.txt  (+42 more)
l10n/src/: generated.rs  lib.rs
l10n_build/: Cargo.toml
l10n_build/src/: lib.rs  main.rs
provider/: Cargo.toml
provider/src/: lib.rs
schema/: Cargo.toml  accesskit.proto
schema/src/: lib.rs
testdata/: README.md  web-page-sample-full-tree.json  web-page-sample.html
testdata/source/: chromium.diff  convert_chromium_tree.py
