[workspace]
resolver = "2"
members = [
    "common",
    "consumer",
    "demo",
    "platforms/android",
    "platforms/atspi-common",
    "platforms/macos",
    "platforms/unix",
    "platforms/windows",
    "platforms/winit",
]
default-members = [
    "common",
    "consumer",
    "demo",
    "platforms/winit",
]

[workspace.package]
authors = ["The AccessKit contributors"]
categories = ["gui"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AccessKit/accesskit"
rust-version = "1.77.2"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
