[workspace]
resolver = "2"
members = [
    "common",
    "consumer",
    "platforms/android",
    "platforms/atspi-common",
    "platforms/macos",
    "platforms/unix",
    "platforms/windows",
    "platforms/winit",
]
default-members = [
    "common",
    "consumer",
    "platforms/winit",
]

[workspace.package]
authors = ["The AccessKit contributors"]
categories = ["gui"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AccessKit/accesskit"
rust-version = "1.85"

[workspace.dependencies]
hashbrown = { version = "0.16", default-features = false, features = ["default-hasher"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
