[workspace]
resolver = "2"
members = [
    "common",
    "consumer",
    "l10n",
    "l10n_build",
    "platforms/android",
    "platforms/atspi-common",
    "platforms/ios",
    "platforms/macos",
    "platforms/unix",
    "platforms/windows",
    "platforms/winit",
]
default-members = [
    "common",
    "consumer",
    "l10n",
    "l10n_build",
    "platforms/winit",
]

[workspace.package]
authors = ["The AccessKit contributors"]
categories = ["gui"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AccessKit/accesskit"
rust-version = "1.85"

[workspace.dependencies]
hashbrown = { version = "0.16", default-features = false, features = ["default-hasher"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
