[package]
name = "accesskit"
version = "0.12.2"
authors = ["Matt Campbell <mattcampbell@pobox.com>"]
license = "MIT OR Apache-2.0"
description = "UI accessibility infrastructure across platforms"
categories = ["gui"]
keywords = ["gui", "ui", "accessibility"]
repository = "https://github.com/AccessKit/accesskit"
readme = "README.md"
edition = "2021"

[package.metadata.docs.rs]
features = ["schemars", "serde"]

[dependencies]
enumn = { version = "0.1.6", optional = true }
pyo3 = { version = "0.20", optional = true }
schemars = { version = "0.8.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "enumn"]
schemars = ["dep:schemars", "serde"]
