[package]
name = "accesskit_consumer"
version = "0.26.0"
authors.workspace = true
license.workspace = true
description = "AccessKit consumer library (internal)"
categories.workspace = true
keywords = ["gui", "ui", "accessibility"]
repository.workspace = true
readme = "README.md"
edition.workspace = true
rust-version.workspace = true

[dependencies]
accesskit = { version = "0.17.1", path = "../common" }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
immutable-chunkmap = "2.0.6"
