[package]
name = "accesskit_consumer"
version = "0.28.0"
authors.workspace = true
license.workspace = true
description = "AccessKit consumer library (internal)"
categories.workspace = true
keywords = ["gui", "ui", "accessibility"]
repository.workspace = true
readme = "README.md"
edition.workspace = true
rust-version.workspace = true

[dependencies]
accesskit = { version = "0.19.0", path = "../common" }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
