[package]
name = "accesskit_l10n_build"
version = "0.1.0"
authors.workspace = true
license.workspace = true
description = "Localization code generator for AccessKit"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
heck = "0.5"
prettyplease = "0.2"
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "printing"] }
