[package]
name = "accesskit_schema"
version = "0.1.0"
authors = ["Matt Campbell <mattcampbell@pobox.com>"]
edition = "2018"

[dependencies]
enumset = { version = "1.0.8", features = ["serde"] }
schemars = { version = "0.8.7", features = ["enumset"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
