[package]
name = "accesskit_c"
version = "0.7.6"
authors.workspace = true
license.workspace = true
publish = false
edition.workspace = true

[lib]
name = "accesskit"
crate-type = ["cdylib", "staticlib"]
doc = false

[features]
cbindgen = []

[dependencies]
accesskit = { version = "0.12.3", path = "../../common" }
paste = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
accesskit_windows = { version = "0.16.3", path = "../../platforms/windows" }

[target.'cfg(target_os = "macos")'.dependencies]
accesskit_macos = { version = "0.11.1", path = "../../platforms/macos" }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
accesskit_unix = { version = "0.7.5", path = "../../platforms/unix" }

