[package]
name = "accesskit_python"
version = "0.3.4"
authors.workspace = true
license.workspace = true
description = "Python bindings to the AccessKit library"
readme = "README.md"
publish = false
edition.workspace = true

[lib]
name = "accesskit"
crate-type = ["cdylib"]
doc = false

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
accesskit = { version = "0.14.0", path = "../../common", features = ["pyo3"] }
pyo3 = { version = "0.20", features = ["abi3-py38", "multiple-pymethods"] }

[target.'cfg(target_os = "windows")'.dependencies]
accesskit_windows = { version = "0.20.0", path = "../../platforms/windows" }

[target.'cfg(target_os = "macos")'.dependencies]
accesskit_macos = { version = "0.15.0", path = "../../platforms/macos" }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
accesskit_unix = { version = "0.10.1", path = "../../platforms/unix" }
